--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,14663],[],[[4,0,0,[5],[1,4600,3290],[]],[6,0,0,[7],[1,7891,4233],[]],[8,0,0,[],[1,12124,2464],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,14973],[],[[4,0,0,[5],[1,4845,3573],[]],[6,0,0,[7],[1,8418,4069],[]],[8,0,0,[9],[1,12487,2413],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Demo","*/Users/benyathip/Desktop/EdVISORY_Quiz_Software-Tester/demo.robot","*demo.robot","*File Upload Test","*FileUpload","*Multiple Windows Test","*MultipleWindows","*Table Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Demo","*/Users/benyathip/Desktop/EdVISORY_Quiz_Software-Tester/demo.robot","*demo.robot","*File Upload Test","*FileUpload","*Multiple Windows Test","*MultipleWindows","*Table Test","*TableTest"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"FileUpload","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"MultipleWindows","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Demo","name":"Demo","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"FileUpload","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"MultipleWindows","pass":1,"skip":0},{"elapsed":"00:00:02","fail":0,"label":"TableTest","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Demo","name":"Demo","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1685096922913;
+window.output["baseMillis"] = 1685345089936;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14668;
+window.output["generated"] = 14977;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
